# smallrand

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  readme.md
.cargo/: mutants.toml
.github/workflows/: rust.yml
benches/: Cargo.toml
benches/benches/: generators.rs
src/: chacha.rs  defaultrng.rs  devices.rs  entropy.rs  lib.rs  nonces.rs  pcg.rs  ranges.rs  rng.rs  rngs.rs  secure_device.rs  secure_entropy.rs  smallrng.rs  stdrng.rs  xoshiro.rs
