[package]
name = "smallrand"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT-0"
readme = "readme.md"
repository = "https://github.com/hpenne/smallrand"
description = """
Random number generation with absolutely minimal dependencies and no unsafe code.
"""
keywords = ["random", "prng", "rand", "xoshiro", "chacha"]
exclude = [".github/workflows/*"]

[features]
default = ["std"]
std = []

[dependencies]
[target.'cfg(not(unix))'.dependencies]
getrandom = "0.3.2"
