[package]
name = "smallrand"
version = "1.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT-0"
readme = "readme.md"
repository = "https://github.com/hpenne/smallrand"
description = """
Random number generation with absolutely minimal dependencies and no unsafe code.
"""
keywords = ["random", "prng", "rand", "xoshiro", "chacha"]
exclude = [".github/workflows/*"]

[features]
default = ["std", "allow-getrandom"]
std = []
allow-getrandom = ["getrandom"]

[dependencies]
[target.'cfg(not(unix))'.dependencies]
getrandom = { version = "0.3.2", optional = true }
